[package]
name = "keystroke_decoder"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xkbcommon = "0.4.0"
regex = "1.4.6"

[dev-dependencies]
input_gatherer = {version = "*", git = "https://github.com/Uniformbuffer3/input_gatherer", branch = "main"}
